:up: update website

--- a/index.html
+++ b/index.html
@@ -567,6 +567,18 @@
                 alarm won't stop. This will be helpful for those who accidentally shut off alarm during sleep. For the patient who needs to sleep in one particular side, user can calibrate the
                 mat according to that, and if the user moves aside from that particular side, alarm will go on so that user can move to one's desired position again.</p>
 
+              <p>&nbsp;</p>
+            </div>
+
+            <div class="col-12">
+              <h3>C Compiler</h3>
+
+              <h4>Tools : Flex, Bison, Yacc (Yet Another Compiler-Compiler)</h4>
+
+              <p>It is a small scale C compiler project. It has four steps : symbol table, lexical analysis, parsing and code generation.</p>
+
+              <h4> <a href = "https://github.com/aminul7506/Small-C-Compiler" target="_blank" rel="noopener">Github Code</a></span></h4>
+
             </div>
 
           </div>
