--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@
 
               <h4><a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Github Code and More Details</a></span></h4>
 
+              <p>&nbsp;</p>
             </div>
 
 
@@ -497,6 +498,7 @@
 
               <h4> <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Github Code</a></span></h4>
 
+              <p>&nbsp;</p>
             </div>
 
 
@@ -515,6 +517,7 @@
 
               <h4> <a href = "https://github.com/aminul7506/Online-Examination-Web-Based-" target="_blank" rel="noopener">Github Code</a></span></h4>
 
+              <p>&nbsp;</p>
             </div>
 
             <div class="col-12">
@@ -528,6 +531,7 @@
 
               <h4> <a href = "https://github.com/aminul7506/Online-Examination-Desktop-" target="_blank" rel="noopener">Github Code</a></span></h4>
 
+              <p>&nbsp;</p>
             </div>
 
             <div class="col-12">
@@ -540,6 +544,7 @@
 
               <h4> <a href = "https://github.com/aminul7506/Air-Fighter" target="_blank" rel="noopener">Github Code</a></span></h4>
 
+              <p>&nbsp;</p>
             </div>
 
 
@@ -550,6 +555,7 @@
 
               <p>A quad copter controller using bluetooth module that can control the movement of a small quad copter.</p>
 
+              <p>&nbsp;</p>
             </div>
 
             <div class="col-12">
@@ -561,6 +567,7 @@
                 alarm won't stop. This will be helpful for those who accidentally shut off alarm during sleep. For the patient who needs to sleep in one particular side, user can calibrate the
                 mat according to that, and if the user moves aside from that particular side, alarm will go on so that user can move to one's desired position again.</p>
 
+              <p>&nbsp;</p>
             </div>
 
             <div class="col-12">
@@ -577,6 +584,7 @@
           </div>
 
           <p>&nbsp;</p>
+
 
           <div class="col-12">
 
@@ -596,6 +604,7 @@
               <h4>Get it on <a href = "https://www.amazon.com/Sojal-Rapid-Roll/dp/B01M9HQHPD/ref=sr_1_4?dchild=1&qid=16027
             65618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-4" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
 
+              <p>&nbsp;</p>
             </div>
 
 
@@ -608,6 +617,7 @@
 
               <h4> <a href = "https://github.com/aminul7506/Rapid-Roll-Desktop-" target="_blank" rel="noopener">Github Code</a></span></h4>
 
+              <p>&nbsp;</p>
             </div>
 
 
@@ -620,6 +630,7 @@
 
               <h4> <a href = "https://github.com/aminul7506/Car-Racing-Game" target="_blank" rel="noopener">Github Code</a></span></h4>
 
+              <p>&nbsp;</p>
             </div>
 
             <div class="col-12">
@@ -634,6 +645,7 @@
               <h4>Get it on <a href = "https://www.amazon.com/Sojal-Notebook/dp/B01DK5LA28/ref=sr_1_
             1?dchild=1&qid=1602780174&refinements=p_4%3ASojal&s=mobile-apps&sr=1-1" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
 
+              <p>&nbsp;</p>
             </div>
 
 
@@ -649,6 +661,7 @@
               <h4>Get it on <a href = "https://www.amazon.com/Sojal-Speedometer-Location/dp/B01EIJP21K/ref=sr_1_3?dchild=1&qid=
             1602765618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-3" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
 
+              <p>&nbsp;</p>
             </div>
 
 
@@ -665,6 +678,7 @@
               <h4>Get it on <a href = "https://www.amazon.com/Sojal-Mental-Age/dp/B01CSTBLJO/ref=sr_1_2?dchild=1&qid=1602765618&refinements=p_
             4%3ASojal&s=mobile-apps&sr=1-2" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
 
+              <p>&nbsp;</p>
             </div>
 
 
@@ -680,6 +694,7 @@
               <h4>Get it on <a href = "https://www.amazon.com/Sojal-Flashlight/dp/B01DK9GVLE/ref=sr_1_5?dchild=1&qid=1602765618&refinements=
             p_4%3ASojal&s=mobile-apps&sr=1-5" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
 
+              <p>&nbsp;</p>
             </div>
 
             <div class="col-12">
