:up: update website

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 
               <h3>Android Stay Safe Application</h3>
 
-              <h4>Tools : Android Studio, Java, Firebase, Google Map API, SQL, Cloud Messaging</h4>
+              <h4>Tools : Android Studio, Java, Firebase, Google Map API, SQL, Push Notification</h4>
 
               <p>It is an android application which is based on the idea of smart city, crime reporting, crime alert and human security. There are
                 two sides in the app: one is admin side and another one is user side.
@@ -703,6 +703,17 @@
               <h4>Tools : Android Studio, Java</h4>
 
               <p>It is a simple calculator app than can perform basic operations.</p>
+
+              <p>&nbsp;</p>
+            </div>
+
+            <div class="col-12">
+              <h3>An information system about ‘Automation of Govt. Hospital Management’ </h3>
+
+              <h4>Tools : Data Flow Diagram, Class Diagram</h4>
+
+              <p>A system design has been proposed for the information of doctors' availability at any time, doctors' automatic attendance system, ensuring doctors' availability
+                in work time by automated monitoring system, information for current available medicine, services from the hospital.</p>
 
             </div>
 
