:up: update website

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
               <h4>Tools : Android Studio, Java, Accelerometer, Canvas</h4>
 
               <p>This is an android rapid roll game. User can play this game using android device accelerometer, see high scores and change theme of
-                gaming screen.
+                gaming screen. The speed of the game increases over times. Game will over if user dies three times.
               </p>
 
               <h4> <a href = "https://github.com/aminul7506/Rapid-Roll" target="_blank" rel="noopener">Github Code</a></span></h4>
@@ -649,7 +649,7 @@
 
               <h4>Tools : Android Studio, Java</h4>
 
-              <p>This is an android notebook application. User can save,edit, delete one's writings in the notebook.</p>
+              <p>This is an android notebook application. User can save, edit, delete one's writings in the notebook.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Github Code</a></span></h4>
 
