:up: update website

--- a/index.html
+++ b/index.html
@@ -583,6 +583,18 @@
             </div>
 
             <div class="col-12">
+              <h3>Ray Tracing</h3>
+
+              <h4>Tools : OpenGL</h4>
+
+              <p>It was a computer graphics course assignment on which I have generated a realistic image using OpenGL.</p>
+
+              <h4> <a href = "https://github.com/aminul7506/RayTracing" target="_blank" rel="noopener">Github Code</a></span></h4>
+
+              <p>&nbsp;</p>
+            </div>
+
+            <div class="col-12">
               <h3>An information system about ‘Automation of Govt. Hospital Management’ </h3>
 
               <h4>Tools : Data Flow Diagram, Class Diagram</h4>
