:up: update website

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
             </div>
 
             <div class="col-12">
-              <h3>An information system about ‘Automation of Govt. Hospital Management’ </h3>
+              <h3>An information system on ‘Automation of Govt. Hospital Management’ </h3>
 
               <h4>Tools : Data Flow Diagram, Class Diagram</h4>
 
