:up: update website

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
             <div class="col-12">
               <h3>C Compiler</h3>
 
-              <h4>Tools : Flex, Bison, Yacc (Yet Another Compiler-Compiler)</h4>
+              <h4>Tools : Flex, Bison, YACC (Yet Another Compiler-Compiler)</h4>
 
               <p>It is a small scale C compiler project. It has four steps : symbol table, lexical analysis, parsing and code generation.</p>
 
