:up: update website

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
             <p><strong>Keywords : </strong> Scene Reconstruction, Missing Scene Construction, Video Processing, Object Monitoring, Object Tracking, Surveillance System</p>
 
-            <img src="/images/thesis_image.png" alt="Flowchart of the System" style='float: left; height: 570px; margin-right: 20px; margin-top: 10px; margin-bottom: 0px;'>
+            <img src="/images/thesis_image.png" alt="Flowchart of the System" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px; margin-bottom: 0px;'>
 
             <p>We have proposed a system that can present information of a human or an object to a user or visual inspector by analyzing
               videos taken from multiple static CCTV cameras from area of interests. It can reduce manual effort of visual inspector on visual surveillance
@@ -317,7 +317,7 @@
               be changed over time. If there is a place in the area of interests where camera is defective or unavailable, we have developed a prediction algorithm for
               predicting the movement of the input object in that specific place using the objects previous or next velocities in different cameras. For determining the
               average velocity of the input object in a camera, we have considered the total changes of pixels over time and then converted the pixel distance to actual
-              meter distance. As meter distance between two pixels is not constant in relative to the center of the camera, we have build a four degree polynomial
+              meter distance. As meter distance between two pixels is not constant in relative to the center of the camera, we have built a four degree polynomial
               approximation to determine meter distance from pixel distance. We have used these average velocities of the input object from different cameras to predict
               the movement of the object in the place of missing or defective camera on given the background information of that place.</p>
 
