:up: update website

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
               approximation to determine meter distance from pixel distance. We have used these average velocities of the input object from different cameras to predict
               the movement of the object in the place of missing or defective camera on given the background information of that place.</p>
 
-            <h4>Status: Manuscript in Preparation</h4>
+            <h4>Status : Manuscript in Preparation</h4>
 
             <h4>Thesis book is available <a href="/files/Scene_Reconstruction_from_Multiple_Static_CCTV_Cameras.pdf">HERE</a></h4>
 
@@ -352,7 +352,7 @@
 
           <div class="col-12">
 
-            <p>Projects I have worked in Ridmik Labs : </p>
+            <p>Projects on which I have worked in Ridmik Labs : </p>
 
             <h4>Boitoi Android Application</h4>
 
