:up: update website

--- a/index.html
+++ b/index.html
@@ -419,6 +419,21 @@
 
             <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm, Bangla POS Tagger
 
+            <p>&nbsp;</p>
+
+          </div>
+
+          <div class="col-12">
+            <h4>Ridmik Account Kit Library</h4>
+
+            <p>Ridmik Account Kit is a library that can help Ridmik app users to quickly log into any Ridmik apps just by using their phone numbers.</p>
+
+            <ul>
+              <li>Worked for developing Ridmik Account Kit Library for both android and iOS</li>
+            </ul>
+
+            <strong>Tools & Languages I have used : </strong>Android Studio, Java, XML, Xcode, Swift, StoryBoard, Keychain
+
           </div>
 
 
