:up: update website

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
           <div class="col-12">
             <h4>Ridmik Account Kit Library</h4>
 
-            <p>Ridmik Account Kit is a library that can help Ridmik app users to quickly log into any Ridmik apps just by using their phone numbers.</p>
+            <p>Ridmik Account Kit is a library that helps Ridmik app users to quickly log into any Ridmik apps just by using their phone numbers.</p>
 
             <ul>
               <li>Worked for developing Ridmik Account Kit Library for both android and iOS</li>
