--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             <p>Ridmik Account Kit is a library that helps Ridmik app users to quickly log into any Ridmik app just by using phone number.</p>
 
             <ul>
-              <li>Worked for developing Ridmik Account Kit Library for both android and iOS</li>
+              <li>Worked for developing Ridmik Account Kit Library for both android and iOS application</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong>Android Studio, Java, XML, Xcode, Swift, StoryBoard, Keychain
