--- a/index.html
+++ b/index.html
@@ -243,10 +243,9 @@
       <div class="col-md-5">
         <h3>Research Interests</h3>
         <ul class="ul-interests">
+          <li>Software Engineering</li>
 
           <li>Computer Vision</li>
-
-          <li>Software Engineering</li>
 
           <li>Natural Language Processing</li>
 
@@ -354,9 +353,24 @@
 
             <p>Projects on which I have worked in Ridmik Labs : </p>
 
+            <h4>Ridmik+ Android Application</h4>
+
+            <p>Ridmik+ is an XMPP based secured messaging and social platform application specialized for Bangladeshi people.</p>
+
+            <ul>
+              <li>Worked in developing XMPP based messaging section of the application and different security issues of the app</li>
+              <li>Working in the continuous development of the app specially on the messaging section</li>
+            </ul>
+
+            <strong>Tools & Languages I have used : </strong>XMPP(Extensible Messaging and Presence Protocol), ejabberd api, AES encryption, Android Studio, Java, Kotlin, SQL
+
+            <h4>Get Ridmik+ on <a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">Google Play</a></span></h4>
+
+            <p>&nbsp;</p>
+
             <h4>Boitoi Android Application</h4>
 
-            <p>Boitoi is a secure native android eBook reader with digital library. It is currently the most popular eBook reader in Bangladesh which has around 300k users.</p>
+            <p>Boitoi is a secure native android eBook reader with digital library. It is currently the most popular eBook reader in Bangladesh which has around 500k users.</p>
 
             <ul>
               <li>Worked in the complete development lifecycle of the application with successful launching, developed most of the functionality in the app</li>
@@ -392,10 +406,10 @@
           <div class="col-12">
             <h4>Ridmik Keyboard Android</h4>
 
-            <p>Ridmik Keyboard is the most popular keyboard in Bangladesh with Bangla phonetic keyboard which has around 20 million users.</p>
+            <p>Ridmik Keyboard is the most popular keyboard in Bangladesh with Bangla phonetic keyboard which has around 50 million users.</p>
 
             <ul>
-              <li>Working in the continuous development of Ridmik Keyboard</li>
+              <li>Worked on fixing some bugs and implementing some new features in Ridmik Keyboard</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, C
