--- a/index.html
+++ b/index.html
@@ -790,6 +790,7 @@
               <strong> Programming Languages : </strong>Java, Swift, Python, C, C++, Kotlin, Objective-C, Assembly(80X86)<br/>
               <strong> Scripting Languages : </strong>JavaScript, HTML, CSS, MATLAB, Shell Scripts <br/>
               <strong> Mobile Application Development : </strong>Android, iOS <br/>
+              <strong> FrameWork : </strong> Django(for developing backend, rest api, web application frontend)
               <strong> Database : </strong>Oracle, SQL <br/>
               <strong> Tools & Others : </strong>Keras, Tensorflow, NLTK, Google Map API, Google Vision API, Firebase, JNI(Java Native Interface), JavaFX, LaTeX <br/>
             </p>
