add aist project

--- a/index.html
+++ b/index.html
@@ -451,6 +451,34 @@
           </div>
 
 
+
+
+          <div class="col-12">
+            <h3>Programmer</h3>
+            <h4>AIST Project, Department of Computer Science and Engineering, BUET, Dhaka, Bangladesh<br> May 1, 2021 - July 31, 2021</h4>
+          </div>
+
+          <div class="col-12">
+
+            <h4>AIST Project</h4>
+
+            <p>AIST project is a web based application for demonstrating practical application of
+              <a href = "https://arxiv.org/abs/2012.08713" target="_blank" rel="noopener">AIST</a>
+              (An Interpretable Attention-based Deep Learning Model for Crime Prediction) paper.</p>
+
+            <ul>
+              <li>Worked in developing backend, rest api and frontend of the application</li>
+              <li>Worked in developing an admin panel for uploading crime data</li>
+            </ul>
+
+            <strong>Tools & Languages I have used : </strong> Django, Python, SQLite, HTML, CSS, Javascript, jQuery, REST API, tkinter
+
+            <h4><a href = "https://aist.pythonanywhere.com/" target="_blank" rel="noopener">AIST Website</a></span></h4>
+
+            <p>&nbsp;</p>
+
+          </div>
+
           </div>
         </div>
 
@@ -471,6 +499,7 @@
             <h1>Projects</h1>
 
           </div>
+
 
           <div class="col-12">
 
