add aist project

--- a/index.html
+++ b/index.html
@@ -451,9 +451,7 @@
           </div>
 
 
-
-
-          <div class="col-12">
+          <div class="col-12 col-lg-4">
             <h3>Programmer</h3>
             <h4>AIST Project, Department of Computer Science and Engineering, BUET, Dhaka, Bangladesh<br> May 1, 2021 - July 31, 2021</h4>
           </div>
@@ -462,13 +460,17 @@
 
             <h4>AIST Project</h4>
 
-            <p>AIST project is a web based application for demonstrating practical application of
+            <p>AIST project is a web based application for demonstrating real life application of
               <a href = "https://arxiv.org/abs/2012.08713" target="_blank" rel="noopener">AIST</a>
-              (An Interpretable Attention-based Deep Learning Model for Crime Prediction) paper.</p>
+              (An Interpretable Attention-based Deep Learning Model for Crime Prediction) paper. The website shows predicted crime info and some
+              indexes of crime dynamics predicted by AIST model(<a href = "https://aist.pythonanywhere.com/home" target="_blank" rel="noopener">Home</a>).
+              Besides, predicted and actual crime data analysis (<a href = "https://aist.pythonanywhere.com/analysis" target="_blank" rel="noopener">Analysis</a>,
+              (<a href = "https://aist.pythonanywhere.com/explore" target="_blank" rel="noopener">Explore</a>) is shown.
+            </p>
 
             <ul>
               <li>Worked in developing backend, rest api and frontend of the application</li>
-              <li>Worked in developing an admin panel for uploading crime data</li>
+              <li>Worked in developing an admin panel for uploading crime data in server</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong> Django, Python, SQLite, HTML, CSS, Javascript, jQuery, REST API, tkinter
