add aist project

--- a/index.html
+++ b/index.html
@@ -451,7 +451,8 @@
           </div>
 
 
-          <div class="col-12 col-lg-4">
+          <div class="col-12">
+            <br><br>
             <h3>Programmer</h3>
             <h4>AIST Project, Department of Computer Science and Engineering, BUET, Dhaka, Bangladesh<br> May 1, 2021 - July 31, 2021</h4>
           </div>
@@ -463,9 +464,7 @@
             <p>AIST project is a web based application for demonstrating real life application of
               <a href = "https://arxiv.org/abs/2012.08713" target="_blank" rel="noopener">AIST</a>
               (An Interpretable Attention-based Deep Learning Model for Crime Prediction) paper. The website shows predicted crime info and some
-              indexes of crime dynamics predicted by AIST model(<a href = "https://aist.pythonanywhere.com/home" target="_blank" rel="noopener">Home</a>).
-              Besides, predicted and actual crime data analysis (<a href = "https://aist.pythonanywhere.com/analysis" target="_blank" rel="noopener">Analysis</a>,
-              (<a href = "https://aist.pythonanywhere.com/explore" target="_blank" rel="noopener">Explore</a>) is shown.
+              indexes of crime dynamics predicted by AIST model. Besides, predicted and actual crime data analysis is shown.
             </p>
 
             <ul>
