update work experience section

--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
     <h1>Biography</h1>
 
     <p>I am currently working as a software engineer at Ridmik Labs, Dhaka, Bangladesh. I have completed my B.Sc. in Computer Science and Engineering
-      from <a href="https://www.buet.ac.bd">Bangladesh University of Engineering and Technology(BUET)</a>.
-      My undergraduate thesis supervisor was
-      <a href="https://cse.buet.ac.bd/faculty_list/detail/mmislam">Dr. Md. Monirul Islam </a>with whom I have worked on the topic
-      <strong> <span>Scene Reconstruction from Multiple Static CCTV Cameras.</span> </strong>
+      from <a href="https://www.buet.ac.bd" target="_blank" rel="noopener">Bangladesh University of Engineering and Technology(BUET)</a>.
+<!--      My undergraduate thesis supervisor was-->
+<!--      <a href="https://cse.buet.ac.bd/faculty_list/detail/mmislam" target="_blank" rel="noopener">Dr. Md. Monirul Islam </a>with whom I have worked on the topic-->
+<!--      <strong> <span>Scene Reconstruction from Multiple Static CCTV Cameras.</span> </strong>-->
     </p>
 
 
@@ -245,9 +245,9 @@
         <ul class="ul-interests">
           <li>Software Engineering</li>
 
-          <li>Computer Vision</li>
-
           <li>Natural Language Processing</li>
+
+          <li>Computer Vision</li>
 
         </ul>
       </div>
@@ -300,9 +300,9 @@
           <div class="col-12">
             <h3>Scene Reconstruction From Multiple Static CCTV Cameras</h3>
 
-            <h4>Supervisor : <a href="https://cse.buet.ac.bd/faculty_list/detail/mmislam">Dr. Md. Monirul Islam </a></h4>
+            <h4>Supervisor : <a href="https://cse.buet.ac.bd/faculty_list/detail/mmislam" target="_blank" rel="noopener">Dr. Md. Monirul Islam </a></h4>
 
-            <h4>Collaborator : <a href="https://www.linkedin.com/in/anwar-hossain-zahid-a46195108/">Anwar Hossain</a></h4>
+            <h4>Collaborator : <a href="https://www.linkedin.com/in/anwar-hossain-zahid-a46195108/" target="_blank" rel="noopener">Anwar Hossain</a></h4>
 
             <p><strong>Keywords : </strong> Scene Reconstruction, Missing Scene Construction, Video Processing, Object Monitoring, Object Tracking, Surveillance System</p>
 
@@ -322,7 +322,7 @@
 
 <!--            <h4>Status : Manuscript in Preparation</h4>-->
 
-            <h4>Thesis book is available <a href="/files/Scene_Reconstruction_from_Multiple_Static_CCTV_Cameras.pdf">HERE</a></h4>
+            <h4>Thesis book is available <a href="/files/Scene_Reconstruction_from_Multiple_Static_CCTV_Cameras.pdf" target="_blank" rel="noopener">HERE</a></h4>
 
           </div>
 
@@ -353,51 +353,79 @@
 
             <p>Projects on which I have worked in Ridmik Labs : </p>
 
-            <h4>Ridmik+ Android Application</h4>
+            <h4>Ridmik+</h4>
 
-            <p>Ridmik+ is an XMPP based secured messaging and social platform application specialized for Bangladeshi people.</p>
+            <p>Ridmik+ is an XMPP based secured messaging and social platform application for android.</p>
 
             <ul>
-              <li>Worked in developing XMPP based messaging section of the application and different security issues of the app</li>
-              <li>Working in the continuous development of the app specially on the messaging section</li>
+              <li>Worked in developing XMPP based one to one and group messaging, end-to-end encrypted messaging
+                and different security issues of the application</li>
+              <li>Working in the continuous development of the app specially on the messaging part</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>XMPP(Extensible Messaging and Presence Protocol), ejabberd api, AES encryption, Android Studio, Java, Kotlin, SQL
+            <strong>Tools & Languages I have used : </strong>XMPP(Extensible Messaging and Presence Protocol), Signal Protocol, ejabberd api,
+            AES encryption, Android Studio, Java, Kotlin, SQL
 
-            <h4>Get Ridmik+ on <a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">Google Play</a></span></h4>
+            <h4>Get <a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">Ridmik+</a> on Google Play</h4>
 
             <p>&nbsp;</p>
 
-            <h4>Boitoi Android Application</h4>
+            <div class="col-12">
+            <h4>Bangla Article Summarizer</h4>
 
-            <p>Boitoi is a secure native android eBook reader with digital library. It is currently the most popular eBook reader in Bangladesh which has around 500k users.</p>
+            <p>Bangla Article Summarizer is a research project which gives the extractive summary of a Bangla article.</p>
 
             <ul>
-              <li>Worked in the complete development lifecycle of the application with successful launching, developed most of the functionality in the app</li>
-              <li>Performed research for the security(standard encryption and decryption) of how book will be stored and retrieved for a user in a device inside the app</li>
-              <li>Working in the continuous research and development of the application</li>
+              <li>Performed research on how to build a Bangla article summarizer</li>
+              <li>Worked for developing Bangla article summarizer after performing research which was based on
+                TF-IDF(Term Frequency and Inverse Document Frequency), Bangla POS(Parts of Speech) tagger,
+                K-means clustering algorithm and NLTK(Natural Language Toolkit) in python</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, Java Native Interface, C, SQL, JavaScript, HTML, CSS, XML
+            <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm, Bangla POS Tagger
 
-            <h4>Get Boitoi on <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Google Play</a></span></h4>
+            <p>&nbsp;</p>
+
+          </div>
+
+            <h4>Boitoi(Android)</h4>
+
+            <p>Boitoi(Android) is a secured android eBook reader with digital in-app book store.
+              It is currently the most popular eBook reader in Bangladesh which has around 500k users.</p>
+
+            <ul>
+              <li>Worked in the complete development lifecycle of the application with successful launching, developed most of the functionalities
+                of the app</li>
+              <li>Performed research for the security(standard encryption and decryption) of how book will be stored in a user's android device and
+                decrypted in the device</li>
+              <li>Working as one of a programming advisors for the continuous development of the application</li>
+            </ul>
+
+            <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, Java Native Interface, C, SQL, JavaScript, HTML, CSS, XML,
+            AES decryption, ReadiumSDK
+
+            <h4>Get <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Boitoi</a> on Google Play</h4>
 
             <p>&nbsp;</p>
           </div>
 
           <div class="col-12">
-            <h4>Boitoi iOS Application</h4>
+            <h4>Boitoi(iOS)</h4>
 
-            <p>Boitoi is a secure native iOS eBook reader with digital library.</p>
+            <p>Boitoi(iOS) is a secured iOS eBook reader with digital library in-app book store.</p>
 
             <ul>
-              <li>Worked for the whole development of this project from its initial development to successful launching and developed all the functionality in the app</li>
-              <li>Performed research on how encryption and decryption can be done using iOS keychain for the books inside the app stored in the device of an user</li>
+              <li>Worked for the whole development of this project from its initial development to successful launching and
+                developed all the functionalities of the app</li>
+              <li>Performed research for the security(standard encryption and decryption) of how book will be stored in a user's iOS device and
+                decrypted in the device using iOS keychain</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Xcode, Swift, Objective-C, C++, JavaScript, HTML, CSS, GRDB, StoryBoard
+            <strong>Tools & Languages I have used : </strong>Xcode, Swift, Objective-C, C++, JavaScript, HTML, CSS, GRDB,
+            StoryBoard, AES decryption, ReadiumSDK
 
-            <h4>Get Boitoi on <a href = "https://apps.apple.com/us/app/boitoi-bangla-ebook-reader/id1505698833" target="_blank" rel="noopener">App Store</a></span></h4>
+            <h4>Get <a href = "https://apps.apple.com/us/app/boitoi-bangla-ebook-reader/id1505698833" target="_blank" rel="noopener">
+              Boitoi</a> on App Store</h4>
 
             <p>&nbsp;</p>
 
@@ -412,33 +440,17 @@
               <li>Worked on fixing some bugs and implementing some new features in Ridmik Keyboard</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, C
+            <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, C, Java Native Interface
 
-            <h4>Get Ridmik Keyboard on <a href = "https://play.google.com/store/apps/details?id=ridmik.keyboard&hl" target="_blank" rel="noopener">Google Play</a></span></h4>
-
-            <p>&nbsp;</p>
-
-          </div>
-
-          <div class="col-12">
-            <h4>Bangla Article Summarizer</h4>
-
-            <p>Bangla Article Summarize is a project which gives the extractive summary of a Bangla article.</p>
-
-            <ul>
-              <li>Performed research on making a Bangla article summarizer</li>
-              <li>Worked for developing Bangla article summarizer after performing research which was based on TF-IDF(Term Frequency and Inverse Document Frequency),
-                Bangla POS(Parts of Speech) tagger, K-means clustering algorithm and NLTK(Natural Language Toolkit) in python</li>
-            </ul>
-
-            <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm, Bangla POS Tagger
+            <h4>Get <a href = "https://play.google.com/store/apps/details?id=ridmik.keyboard&hl" target="_blank" rel="noopener">Ridmik Keyboard</a>
+              on Google Play</h4>
 
             <p>&nbsp;</p>
 
           </div>
 
           <div class="col-12">
-            <h4>Ridmik Account Kit Library</h4>
+            <h4>Ridmik Account Kit</h4>
 
             <p>Ridmik Account Kit is a library that helps Ridmik app users to quickly log into any Ridmik app just by using phone number.</p>
 
@@ -463,8 +475,8 @@
 
             <p>AIST project is a web based application for demonstrating real life application of
               <a href = "https://arxiv.org/abs/2012.08713" target="_blank" rel="noopener">AIST</a>
-              (An Interpretable Attention-based Deep Learning Model for Crime Prediction) paper. The website shows predicted crime info and some
-              indexes of crime dynamics predicted by AIST model. Besides, predicted and actual crime data analysis is shown.
+              (An Interpretable Attention-based Deep Learning Model for Crime Prediction) paper(preprint). The website shows predicted crime info and some
+              indexes of crime dynamics predicted by AIST model. Besides, predicted and actual crime data analysis is shown in the website.
             </p>
 
             <ul>
@@ -485,8 +497,6 @@
 
       </div>
     </section>
-
-
 
 
 
