update work experience section

--- a/index.html
+++ b/index.html
@@ -366,28 +366,31 @@
             <strong>Tools & Languages I have used : </strong>XMPP(Extensible Messaging and Presence Protocol), Signal Protocol, ejabberd api,
             AES encryption, Android Studio, Java, Kotlin, SQL
 
-            <h4>Get <a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">Ridmik+</a> on Google Play</h4>
+            <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">Ridmik+</a> on Google Play</h4>
 
             <p>&nbsp;</p>
+
+            </div>
 
             <div class="col-12">
             <h4>Bangla Article Summarizer</h4>
 
-            <p>Bangla Article Summarizer is a research project which gives the extractive summary of a Bangla article.</p>
+            <p>Bangla Article Summarizer is a research project which gives the extractive summary of a Bangla news article.</p>
 
             <ul>
-              <li>Performed research on how to build a Bangla article summarizer</li>
-              <li>Worked for developing Bangla article summarizer after performing research which was based on
-                TF-IDF(Term Frequency and Inverse Document Frequency), Bangla POS(Parts of Speech) tagger,
+              <li>Performed research on making a Bangla article summarizer for a Bangla news article</li>
+              <li>Worked for developing Bangla article summarizer after research which was based on
+                TF-IDF(Term Frequency and Inverse Document Frequency), our prepared Bangla word dataset with POS(Parts of Speech) tagger,
                 K-means clustering algorithm and NLTK(Natural Language Toolkit) in python</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm, Bangla POS Tagger
+            <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm, Bangla word dataset
 
             <p>&nbsp;</p>
 
-          </div>
+            </div>
 
+          </div>
             <h4>Boitoi(Android)</h4>
 
             <p>Boitoi(Android) is a secured android eBook reader with digital in-app book store.
@@ -404,7 +407,7 @@
             <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, Java Native Interface, C, SQL, JavaScript, HTML, CSS, XML,
             AES decryption, ReadiumSDK
 
-            <h4>Get <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Boitoi</a> on Google Play</h4>
+            <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Boitoi</a> on Google Play</h4>
 
             <p>&nbsp;</p>
           </div>
@@ -412,7 +415,7 @@
           <div class="col-12">
             <h4>Boitoi(iOS)</h4>
 
-            <p>Boitoi(iOS) is a secured iOS eBook reader with digital library in-app book store.</p>
+            <p>Boitoi(iOS) is a secured iOS eBook reader with digital in-app book store.</p>
 
             <ul>
               <li>Worked for the whole development of this project from its initial development to successful launching and
@@ -424,7 +427,7 @@
             <strong>Tools & Languages I have used : </strong>Xcode, Swift, Objective-C, C++, JavaScript, HTML, CSS, GRDB,
             StoryBoard, AES decryption, ReadiumSDK
 
-            <h4>Get <a href = "https://apps.apple.com/us/app/boitoi-bangla-ebook-reader/id1505698833" target="_blank" rel="noopener">
+            <h4><a href = "https://apps.apple.com/us/app/boitoi-bangla-ebook-reader/id1505698833" target="_blank" rel="noopener">
               Boitoi</a> on App Store</h4>
 
             <p>&nbsp;</p>
@@ -437,12 +440,12 @@
             <p>Ridmik Keyboard is the most popular keyboard in Bangladesh with Bangla phonetic keyboard which has around 50 million users.</p>
 
             <ul>
-              <li>Worked on fixing some bugs and implementing some new features in Ridmik Keyboard</li>
+              <li>Worked on fixing some bugs, design changes, and implementing some new features in Ridmik Keyboard</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, C, Java Native Interface
 
-            <h4>Get <a href = "https://play.google.com/store/apps/details?id=ridmik.keyboard&hl" target="_blank" rel="noopener">Ridmik Keyboard</a>
+            <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.keyboard&hl" target="_blank" rel="noopener">Ridmik Keyboard</a>
               on Google Play</h4>
 
             <p>&nbsp;</p>
@@ -452,7 +455,7 @@
           <div class="col-12">
             <h4>Ridmik Account Kit</h4>
 
-            <p>Ridmik Account Kit is a library that helps Ridmik app users to quickly log into any Ridmik app just by using phone number.</p>
+            <p>Ridmik Account Kit is a library that helps Ridmik app users to quickly login to any Ridmik app just by using phone number.</p>
 
             <ul>
               <li>Worked for developing Ridmik Account Kit Library for both android and iOS application</li>
@@ -466,17 +469,17 @@
           <div class="col-12">
             <br><br><br>
             <h3>Programmer</h3>
-            <h4>AIST Project, Department of Computer Science and Engineering, BUET, Dhaka, Bangladesh<br> May 1, 2021 - July 31, 2021</h4>
+            <h4>AIST Demo Project, Department of Computer Science and Engineering, BUET, Dhaka, Bangladesh<br> May 1, 2021 - July 31, 2021</h4>
           </div>
 
           <div class="col-12">
 
-            <h4>AIST Project</h4>
+            <h4>AIST Demo Project</h4>
 
-            <p>AIST project is a web based application for demonstrating real life application of
+            <p>AIST Demo project is a web based application for demonstrating real life application of
               <a href = "https://arxiv.org/abs/2012.08713" target="_blank" rel="noopener">AIST</a>
-              (An Interpretable Attention-based Deep Learning Model for Crime Prediction) paper(preprint). The website shows predicted crime info and some
-              indexes of crime dynamics predicted by AIST model. Besides, predicted and actual crime data analysis is shown in the website.
+              (An Interpretable Attention-based Deep Learning Model for Crime Prediction) paper(preprint). The website shows predicted crimes info and some
+              indexes of crime dynamics predicted by AIST model in a given location. Besides, predicted and actual crime data analysis is shown in the website.
             </p>
 
             <ul>
@@ -486,7 +489,7 @@
 
             <strong>Tools & Languages I have used : </strong> Django, Python, SQLite, HTML, CSS, Javascript, jQuery, REST API, tkinter
 
-            <h4><a href = "https://aist.pythonanywhere.com/" target="_blank" rel="noopener">AIST Website</a></span></h4>
+            <h4><a href = "https://aist.pythonanywhere.com/" target="_blank" rel="noopener">AIST Website</a></h4>
 
             <p>&nbsp;</p>
 
