update work experience section

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
 
         <div class="row">
-          <div class="col-12 col-lg-4 section-heading">
+          <div class="col-12 section-heading">
             <h1>Work Experience</h1>
 
           </div>
@@ -370,7 +370,7 @@
 
             <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">Ridmik+</a> on Google Play</h4>
 
-            <p>&nbsp;</p>
+            <br><br>
 
             <h4>Bangla Article Summarizer</h4>
 
@@ -385,7 +385,7 @@
 
             <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm, Bangla word dataset
 
-            <p>&nbsp;</p>
+            <br><br>
 
             <h4>Boitoi(Android)</h4>
 
@@ -405,7 +405,7 @@
 
             <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Boitoi</a> on Google Play</h4>
 
-            <p>&nbsp;</p>
+            <br><br>
 
 
             <h4>Boitoi(iOS)</h4>
@@ -425,7 +425,7 @@
             <h4><a href = "https://apps.apple.com/us/app/boitoi-bangla-ebook-reader/id1505698833" target="_blank" rel="noopener">
               Boitoi</a> on App Store</h4>
 
-            <p>&nbsp;</p>
+            <br><br>
 
 
             <h4>Ridmik Keyboard Android</h4>
@@ -441,7 +441,7 @@
             <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.keyboard&hl" target="_blank" rel="noopener">Ridmik Keyboard</a>
               on Google Play</h4>
 
-            <p>&nbsp;</p>
+            <br><br>
 
 
             <h4>Ridmik Account Kit</h4>
