update work experience section

--- a/index.html
+++ b/index.html
@@ -804,12 +804,13 @@
 
           <div class="col-12">
             <p>
-              <strong> Programming Languages : </strong>Java, Swift, Python, C, C++, Kotlin, Objective-C, Assembly(80X86)<br/>
+              <strong> Programming Languages : </strong>Java, Python, Swift, C, C++, Kotlin, Objective-C, Assembly(80X86)<br/>
               <strong> Scripting Languages : </strong>JavaScript, HTML, CSS, MATLAB, Shell Scripts <br/>
               <strong> Mobile Application Development : </strong>Android, iOS <br/>
-              <strong> FrameWork : </strong> Django(for developing backend, rest api, web application frontend)
+              <strong> FrameWork : </strong> Django <br>
               <strong> Database : </strong>Oracle, SQL <br/>
-              <strong> Tools & Others : </strong>Keras, Tensorflow, NLTK, Google Map API, Google Vision API, Firebase, JNI(Java Native Interface), JavaFX, LaTeX <br/>
+              <strong> Tools & Others : </strong>Keras, Tensorflow, NLTK, Google Map API, Google Vision API,
+                Firebase, JNI(Java Native Interface), JavaFX, LaTeX, tkinter <br/>
             </p>
           </div>
 
@@ -875,7 +876,7 @@
 
       <li>
         <i class="fa-li fab fa-skype fa-2x" aria-hidden="true"></i>
-        <a href="https://join.skype.com/invite/XctC6sTJphFd">Skype Me</a>
+        <a href="https://join.skype.com/invite/XctC6sTJphFd" target="_blank" rel="noopener">Skype Me</a>
       </li>
 
 
