--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                 <li>Police can set a area as crime or danger prone</li>
               </ul>
 
-              <h4><a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Github Code and More Details</a></span></h4>
+              <h4><a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Github Code and More Details</a></h4>
 
               <br>
 
@@ -535,7 +535,7 @@
                 used one year data from share market and made a model to learn using LSTM(Long Short Term Memory). I have used multiple
                 attribute to predict next day share market opening price.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Github Code</a></h4>
 
               <br>
 
@@ -550,7 +550,7 @@
                 both MCQ and descriptive type question and teacher can give marks to this and evaluation will be done automatically.
                 This project is of great use for schools and colleges to remove burden of manual checking of answers and results.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Online-Examination-Web-Based-" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/Online-Examination-Web-Based-" target="_blank" rel="noopener">Github Code</a></h4>
 
               <br>
 
@@ -563,7 +563,7 @@
                 for his subject. Students can give MCQ exam on question uploaded by teachers and can see their marks and all previous history on every subject.
               </p>
 
-              <h4> <a href = "https://github.com/aminul7506/Online-Examination-Desktop-" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/Online-Examination-Desktop-" target="_blank" rel="noopener">Github Code</a></h4>
 
               <br>
 
@@ -574,7 +574,7 @@
               <p>It is a funny air fighter game. There are multiple levels in this game and leader boards from where
                 user can see high scores of his own and others.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Air-Fighter" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/Air-Fighter" target="_blank" rel="noopener">Github Code</a></h4>
 
               <br>
 
@@ -584,7 +584,7 @@
 
               <p>It is a small scale C compiler project. It has four steps : symbol table, lexical analysis, parsing and code generation.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Small-C-Compiler" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/Small-C-Compiler" target="_blank" rel="noopener">Github Code</a></h4>
 
               <br>
 
@@ -594,7 +594,7 @@
 
               <p>It was a computer graphics course assignment on which I have generated a realistic image using OpenGL.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/RayTracing" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/RayTracing" target="_blank" rel="noopener">Github Code</a></h4>
 
               <br>
 
@@ -635,10 +635,10 @@
                 gaming screen. The speed of the game increases over times. Game will over if user dies three times.
               </p>
 
-              <h4> <a href = "https://github.com/aminul7506/Rapid-Roll" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/Rapid-Roll" target="_blank" rel="noopener">Github Code</a></h4>
 
-              <h4>Get it on <a href = "https://www.amazon.com/Sojal-Rapid-Roll/dp/B01M9HQHPD/ref=sr_1_4?dchild=1&qid=16027
-            65618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-4" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
+              <h4><a href = "https://www.amazon.com/Sojal-Rapid-Roll/dp/B01M9HQHPD/ref=sr_1_4?dchild=1&qid=16027
+            65618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-4" target="_blank" rel="noopener">Rapid Roll</a> on Amazon App Store</h4>
 
             <br>
 
@@ -649,7 +649,7 @@
 
               <p>This is a rapid roll game using iGraphics. User can play and see high scores.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Rapid-Roll-Desktop-" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/Rapid-Roll-Desktop-" target="_blank" rel="noopener">Github Code</a></h4>
 
               <br>
 
@@ -659,7 +659,7 @@
 
               <p>This is a car racing game using unity 3D game engine. This project has the android, iOS and desktop version.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Car-Racing-Game" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/Car-Racing-Game" target="_blank" rel="noopener">Github Code</a></h4>
 
               <br>
 
@@ -669,10 +669,10 @@
 
               <p>This is an android notebook application. User can save, edit, delete one's writings in the notebook.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Github Code</a></h4>
 
-              <h4>Get it on <a href = "https://www.amazon.com/Sojal-Notebook/dp/B01DK5LA28/ref=sr_1_
-            1?dchild=1&qid=1602780174&refinements=p_4%3ASojal&s=mobile-apps&sr=1-1" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
+              <h4><a href = "https://www.amazon.com/Sojal-Notebook/dp/B01DK5LA28/ref=sr_1_
+            1?dchild=1&qid=1602780174&refinements=p_4%3ASojal&s=mobile-apps&sr=1-1" target="_blank" rel="noopener">Notebook</a> on Amazon App Store</h4>
 
               <br>
 
@@ -682,10 +682,10 @@
 
               <p>This is an android application from which user can see one's current velocity , current location in map and location details.</p>
 
-              <h4> <a href = "https://github.com/aminul7506/Speedometer" target="_blank" rel="noopener">Github Code</a></span></h4>
+              <h4> <a href = "https://github.com/aminul7506/Speedometer" target="_blank" rel="noopener">Github Code</a></h4>
 
-              <h4>Get it on <a href = "https://www.amazon.com/Sojal-Speedometer-Location/dp/B01EIJP21K/ref=sr_1_3?dchild=1&qid=
-            1602765618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-3" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
+              <h4><a href = "https://www.amazon.com/Sojal-Speedometer-Location/dp/B01EIJP21K/ref=sr_1_3?dchild=1&qid=
+            1602765618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-3" target="_blank" rel="noopener">Speedometer and Location</a> on Amazon App Store</h4>
 
               <br>
 
@@ -699,8 +699,8 @@
 
               <h4> <a href = "https://github.com/aminul7506/Mental-Age-V-1" target="_blank" rel="noopener">Github Code</a></span></h4>
 
-              <h4>Get it on <a href = "https://www.amazon.com/Sojal-Mental-Age/dp/B01CSTBLJO/ref=sr_1_2?dchild=1&qid=1602765618&refinements=p_
-            4%3ASojal&s=mobile-apps&sr=1-2" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
+              <h4><a href = "https://www.amazon.com/Sojal-Mental-Age/dp/B01CSTBLJO/ref=sr_1_2?dchild=1&qid=1602765618&refinements=p_
+            4%3ASojal&s=mobile-apps&sr=1-2" target="_blank" rel="noopener">Mental Age</a> on Amazon App Store</h4>
 
               <br>
 
@@ -713,7 +713,7 @@
               <h4> <a href = "https://github.com/aminul7506/Flashlight" target="_blank" rel="noopener">Github Code</a></span></h4>
 
               <h4>Get it on <a href = "https://www.amazon.com/Sojal-Flashlight/dp/B01DK9GVLE/ref=sr_1_5?dchild=1&qid=1602765618&refinements=
-            p_4%3ASojal&s=mobile-apps&sr=1-5" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
+            p_4%3ASojal&s=mobile-apps&sr=1-5" target="_blank" rel="noopener">Flashlight</a> on Amazon App Store</h4>
 
               <br>
 
